<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:layout_marginTop="@dimen/dp_10"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_12_bg"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_14"
    android:paddingRight="@dimen/dp_14">
    <RelativeLayout
        android:id="@+id/rel_cl"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispatch_txt4"
            android:fontFamily="@string/PingFangSC_Regular"
            android:textColor="@color/needcar_txt_color4"
            android:textSize="@dimen/sp_14"
            />
        <TextView
            android:id="@+id/tv_xzcl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dispatch_txt7"
            android:textColor="@color/work_item_txt_color"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            android:textColorHint="@color/needcar_txt_color1"
            android:fontFamily="@string/PingFang_SC_Medium"
            android:layout_toLeftOf="@+id/img_right2"
            />
        <ImageView
            android:id="@+id/img_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_right_gray"/>
    </RelativeLayout>
    <View
        style="@style/view_top_bottom10"/>
    <RelativeLayout
        android:id="@+id/rel_jsr"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispatch_txt5"
            android:fontFamily="@string/PingFangSC_Regular"
            android:textColor="@color/needcar_txt_color4"
            android:textSize="@dimen/sp_14"
            />
        <TextView
            android:id="@+id/tv_xzjsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dispatch_txt6"
            android:textColorHint="@color/needcar_txt_color1"
            android:fontFamily="@string/PingFang_SC_Medium"
            android:gravity="right"
            android:textColor="@color/work_item_txt_color"
            android:textSize="@dimen/sp_14"
            android:layout_toLeftOf="@+id/img_right1"
            />
        <ImageView
            android:id="@+id/img_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_right_gray"/>
    </RelativeLayout>
</LinearLayout>
</LinearLayout>