<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_car"
        android:layout_width="@dimen/dp_179"
        android:layout_height="@dimen/dp_88"
        android:layout_marginTop="@dimen/dp_26"
        android:scaleType="center"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needcar1_txt1"
            android:textColor="@color/needcar_txt_color1"
            android:fontFamily="@string/PingFangSC_Regular"
            android:textSize="@dimen/sp_12"/>
        <TextView
            android:id="@+id/hplx_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingLeft="@dimen/dp_2"
            android:paddingTop="@dimen/dp_11"
            android:paddingBottom="@dimen/dp_11"
            android:textColor="@color/needcar_txt_color2"
            android:textSize="@dimen/sp_12"
            android:drawableRight="@mipmap/icon_black_bottom"
            android:drawablePadding="@dimen/dp_5"
            android:paddingRight="@dimen/dp_14"
            android:fontFamily="@string/PingFang_SC_Medium"
            android:text="不限"/>
        <TextView
            android:id="@+id/tv_zws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_14"
            android:text="@string/needcar1_txt3"
            android:fontFamily="@string/PingFangSC_Regular"
            android:textColor="@color/needcar_txt_color1"
            android:textSize="@dimen/sp_12"/>
        <TextView
            android:id="@+id/zw_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needcar1_txt4"
            android:drawableRight="@mipmap/icon_black_bottom"
            android:drawablePadding="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_2"
            android:paddingTop="@dimen/dp_11"
            android:paddingBottom="@dimen/dp_11"
            android:paddingRight="@dimen/dp_14"
            android:textStyle="bold"
            android:fontFamily="@string/PingFang_SC_Medium"
            android:textColor="@color/needcar_txt_color2"
            android:textSize="@dimen/sp_12"
            />
    </LinearLayout>
</LinearLayout>