<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_12_bg"
    android:layout_marginLeft="@dimen/dp_6"
    android:layout_marginRight="@dimen/dp_6"
    android:layout_marginBottom="@dimen/dp_10"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_route_txt1"
            android:textColor="@color/needcar_txt_color4"
            android:textSize="@dimen/sp_13"
            />

        <TextView
            android:id="@+id/tv_mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_route_txt2"
            android:textColor="@color/app_main_colors"
            android:textSize="@dimen/sp_11"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_4"
            android:background="@drawable/blue_bg_4"
            />
    </RelativeLayout>
    <View
        style="@style/view_top_bottom10"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="@dimen/dp_17"
            android:layout_height="@dimen/dp_17"
            android:text="@string/needcar2_tjd_txt"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/blue_yuan"
            android:textSize="@dimen/sp_10"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/txt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_1"
            android:text="@string/needcar2_tjd_txt1"
            android:textColor="@color/work_item_txt_color"
            android:layout_marginLeft="@dimen/dp_12"
            android:textSize="@dimen/sp_16"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lin_tjd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_tjd_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_details_txt1"
            android:textColor="@color/needcar_txt_color1"
            android:textSize="@dimen/sp_12"
            android:drawableLeft="@mipmap/icon_bottom_gray"
            android:drawablePadding="@dimen/dp_7"
            android:layout_marginLeft="@dimen/dp_28"
            android:fontFamily="@string/PingFangSC_Regular"
            />
        <TextView
            android:id="@+id/txt_zk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_details_txt2"
            android:textColor="@color/app_main_colors"
            android:paddingTop="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_8"
            android:paddingRight="@dimen/dp_6"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@string/PingFangSC_Regular"
            />
    </LinearLayout>
    <com.ttce.vehiclemanage.widget.MaxRecyclerView
        android:id="@+id/recycler_view_tjd"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_16"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_2"
            android:layout_width="@dimen/dp_17"
            android:layout_height="@dimen/dp_17"
            android:text="@string/needcar2_tjd_txt0"
            android:textColor="@color/white"
            android:background="@drawable/orange_yuan"
            android:textSize="@dimen/sp_10"
            android:gravity="center"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/txt_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_2"
            android:text="@string/needcar2_tjd_txt1"
            android:textColor="@color/work_item_txt_color"
            android:layout_marginLeft="@dimen/dp_12"
            android:textSize="@dimen/sp_16"
            />
    </RelativeLayout>

    <include layout="@layout/edit_del"
        android:visibility="gone"
    />
</LinearLayout>


</LinearLayout>

