<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/title_bar" />
            <com.baidu.mapapi.map.TextureMapView
                android:id="@+id/mmapview"
                android:layout_width="match_parent"
                android:layout_height="295dp" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daka_txt2"
                android:layout_marginTop="-20dp"
                android:background="@drawable/f3_l_r_20_bg"
                android:textColor="@color/work_item_txt_color"
                android:textSize="@dimen/sp_16"
                android:drawableLeft="@mipmap/icon_gray_wz"
                android:paddingTop="@dimen/dp_18"
                android:paddingLeft="@dimen/dp_17"
                android:fontFamily="@string/PingFang_SC_Medium"
                android:drawablePadding="@dimen/dp_7"
                android:paddingBottom="@dimen/dp_10"
                android:lineHeight="@dimen/dp_22"
                android:paddingRight="@dimen/dp_34"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daka_txt1"
                android:textColor="@color/needcar_txt_color4"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_16"
                android:fontFamily="@string/PingFangSC_Regular"
                android:layout_marginTop="@dimen/dp_16"
                />
            <EditText
                android:id="@+id/edt_tjdmc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/daka_txt3"
                android:textColorHint="@color/needcar_txt_color1"
                android:textColor="@color/needcar_txt_color4"
                android:textSize="@dimen/sp_14"
                android:fontFamily="@string/PingFangSC_Regular"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:background="@null"
                />
            <View
                style="@style/view_top_bottom10"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daka_txt4"
                android:layout_marginLeft="@dimen/dp_16"
                android:textColor="@color/needcar_txt_color4"
                android:textSize="@dimen/sp_14"
                android:fontFamily="@string/PingFangSC_Regular"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                />
            <TextView
                android:id="@+id/tv_dala_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daka_txt5"
                android:textColor="@color/work_item_txt_color"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_16"
                android:paddingTop="@dimen/dp_5"
                android:fontFamily="@string/PingFangSC_Regular"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_19"
                android:paddingRight="@dimen/dp_18"
                android:background="@drawable/gray_15_bg"
                android:layout_marginBottom="@dimen/dp_10"
                />
            <View
                style="@style/view_top_bottom10"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daka_txt6"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@string/PingFangSC_Regular"
                android:layout_marginBottom="@dimen/dp_10"
                android:textColor="@color/needcar_txt_color4"
                android:textSize="@dimen/sp_14"
                />
            <com.ttce.vehiclemanage.widget.MaxRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"/>
            <View
                style="@style/view_top_bottom10"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daka_txt7"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:fontFamily="@string/PingFangSC_Regular"
                android:textColor="@color/needcar_txt_color4"
                android:textSize="@dimen/sp_14"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gray_bg_10"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_10"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edt_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/daka_txt8"
                    android:textColor="@color/needcar_txt_color1"
                    android:textSize="@dimen/sp_14"
                    android:background="@null"
                    android:padding="@dimen/dp_12"
                    android:fontFamily="@string/PingFangSC_Regular"
                    />
                <EditText
                    android:id="@+id/edt_nr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/daka_txt9"
                    android:textColor="@color/needcar_txt_color1"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@string/PingFangSC_Regular"
                    android:background="@null"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingRight="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_41"
                    />
            </LinearLayout>
            <com.ttce.vehiclemanage.widget.linearlayout.ShadowLayout
        android:orientation="vertical"
        android:id="@+id/tv_bottom"
        android:layout_alignParentBottom="true"
        app:shadowRadius="@dimen/dp_0"
        app:shadowColor="@color/e5_color"
        app:bgColor="@color/white"
        app:xOffset="@dimen/dp_0"
        app:yOffset="@dimen/dp2"
        app:blurRadius="@dimen/dp_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_add"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:text="@string/daka_txt"
            android:fontFamily="@string/PingFang_SC_Medium"
            style="@style/btn_blue_22"/>

    </com.ttce.vehiclemanage.widget.linearlayout.ShadowLayout>
        </LinearLayout>

</ScrollView>