<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/id_select"
            android:layout_width="@dimen/dp_14"
            android:layout_height="@dimen/dp_14"
            android:clickable="false"
            android:layout_centerVertical="true"
            android:button="@null" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_toRightOf="@+id/id_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needcar3_yclx_txt"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:textColor="@color/work_item_txt_color"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:fontFamily="@string/PingFangSC_Regular"
            />

        <TextView
            android:id="@+id/tv_mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needcar3_yclx_txt2"
            android:visibility="gone"
            android:textColor="@color/needcar_txt_color4"
            android:background="@drawable/border_gray_bg_4"
            android:paddingTop="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_9"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/dp_6"
            android:paddingRight="@dimen/dp_8"
            android:textSize="@dimen/sp_12"
            />
</RelativeLayout>

<View
   style="@style/view_top_bottom10"
    android:layout_marginLeft="@dimen/dp_16"
    android:layout_marginRight="@dimen/dp_15"/>
</LinearLayout>